[추가] currencyLayer API를 통해 환율정보 가져오기 (currencyLayer API를 이용하기 위한 정보들을 apllication.properties에서 관리하기 위해 추가함)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+currencyLayer.accessKey = dca49861159107a6efa5ebc21c1940c2
+currencyLayer.url = http://www.apilayer.net/api/live
+currencyLayer.source = USD
+currencyLayer.currencies = KRW,JPY,PHP
+currencyLayer.cycleTime = 60
 
